<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPink"

    tools:context=".AlarmActivity">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_timepicker"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/no_alarm_set"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"/>
    <Button
        android:id="@+id/button_timepicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/open_time_picker"
        android:textStyle="bold"
        android:background="@drawable/buuton_stroke_black95_press_white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>
    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_timepicker"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:textStyle="bold"
        android:text="@string/cancel_alarm"
        android:background="@drawable/buuton_stroke_black95_press_white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"

        />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:textStyle="bold"
        android:background="@drawable/buuton_stroke_black95_press_white"
        android:text="@string/back" />
</RelativeLayout>