<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/dialogfon"
    android:background="@drawable/previewbackground"
    android:layout_gravity="center"
    android:scaleType="centerCrop"
    android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center">
        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/btnclose"
            android:text="X"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@drawable/buuton_stroke_black95_press_white"
            android:layout_gravity="end"
            android:layout_weight="10"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="60">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textViewInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_note_info"
                    android:textSize="24sp"
                    />

                <ImageView
                    android:id="@+id/imageViewBtn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/clock" />

                <ImageView
                    android:id="@+id/imageViewClock"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/imgbtn" />

                <TextView
                    android:id="@+id/textViewInfoDay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_day"
                    android:textSize="24sp"/>
                <TextView
                    android:id="@+id/textViewInfoTrue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_day"
                    android:textSize="18sp"/>
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/buttoncontinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/buuton_stroke_black95_press_white"
            android:layout_weight="20"
            android:text="@string/text_continue"
            android:textColor="@color/colorPrimaryDark"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textAllCaps="true"
            />

    </LinearLayout>
</LinearLayout>